# pynuvie

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
demo/: play.sh
docs/: FORMAT.md
research/: ENCODING.md  FLI_THEORY.md  test_fli_basics.py
research/nuviemaker_flibug/: NOTES.md  dis6502.py  lv.nuf  stripes.nuf  vd_dumpcode.py  vd_dumphi.py  vd_findgen.py  vd_lv.py  vd_stripes.py
research/nuviemaker_pack/: NOTES.md  pack_table.json  vd_pack_parity.py  vd_verify_pack.py
src/nuvie/: __init__.py  _clean.py  _displayer.py  _dither.py  _flibug.py  _hires.py  _mufflon.py  _mufflon_driver.py  _sprites.py  cli.py  encode.py  music.py  nufli.py  pack.py  palette.py  playlist.py  reu.py  slotmap.py  testpattern.py
src/nuvie/data/: pack_table.json  slotmap.json
tests/: test_cli.py  test_displayer.py  test_encode.py  test_flibug.py  test_lint.py  test_mufflon_driver.py  test_mufflon_parity.py  test_music.py  test_nufli.py  test_pack.py  test_playlist.py  test_reu.py  test_testpattern.py
tests/fixtures/: mufflon_parity.nuf  nufli_sample.nuf
tests/integration/: README.md  make_movie.py  verify_decode.py  verify_encode.py
