[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pynuvie"
dynamic = ["version"]
description = "Read, write and document Commodore 64 NUVIE REU video files."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Josh Bailey", email = "josh@overlyspecific.com" }]
keywords = ["c64", "commodore", "nuvie", "nufli", "reu", "video", "retrocomputing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Emulators",
]
dependencies = []

[project.optional-dependencies]
image = ["Pillow>=9.0", "numpy>=1.20"]
dev = ["pytest>=7", "pytest-cov", "Pillow>=9.0", "numpy>=1.20", "numba>=0.58",
       "build", "ruff", "black>=24", "pylint>=3.3"]

[project.urls]
Homepage = "https://github.com/anarkiwi/pynuvie"
Repository = "https://github.com/anarkiwi/pynuvie"
"Format documentation" = "https://github.com/anarkiwi/pynuvie/blob/main/docs/FORMAT.md"

[project.scripts]
nuvie = "nuvie.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nuvie = ["data/*.json", "data/*.bin"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint.main]
# numba is imported lazily inside functions; don't fail if it isn't installed.
ignored-modules = ["numba"]
# tests/integration scripts share helper modules from their own directory and run
# with src/ on the path; let pylint resolve them the same way pytest does.
init-hook = 'import sys; sys.path[:0] = ["src", "tests/integration"]'

[tool.pylint."messages control"]
# Keep the checks that matter (errors + unused imports/vars/args); silence the
# purely stylistic / heuristic ones that would otherwise bury the signal.
# Unused-import / unused-variable / unused-argument stay enabled.
disable = [
    "missing-module-docstring", "missing-class-docstring", "missing-function-docstring",
    "invalid-name", "too-few-public-methods", "too-many-locals", "too-many-branches",
    "too-many-statements", "too-many-arguments", "too-many-positional-arguments",
    "too-many-nested-blocks",
    "too-many-instance-attributes", "too-many-return-statements", "import-outside-toplevel",
    "duplicate-code", "fixme", "consider-using-f-string", "use-dict-literal",
    "broad-exception-caught", "global-statement", "unbalanced-tuple-unpacking",
    "cyclic-import", "wrong-import-position",
]
